force-app/main/default/objects/Communications_Projects__c/Communications_Projects__c.object-meta.xml
<CustomObject>
    <label>Communications Project</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Communications Projects Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>