force-app/main/default/objects/Communications_Projects__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
            <value>
                <fullName>Candidates</fullName>
            </value>
            <value>
                <fullName>Company-wide</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Executives</fullName>
            </value>
            <value>
                <fullName>Hayward</fullName>
            </value>
            <value>
                <fullName>Livermore</fullName>
            </value>
            <value>
                <fullName>Off-Site</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Union</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>