force-app/main/default/objects/Communications_Projects__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Intranet</fullName>
            </value>
            <value>
                <fullName>Digital_Displays</fullName>
                <label>Digital Displays</label>
            </value>
            <value>
                <fullName>Print_PDF</fullName>
                <label>Print (PDF)</label>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>