force-app/main/default/objects/Communications_Projects__c/fields/Content_Effort__c.field-meta.xml
<CustomField>
    <fullName>Content_Effort__c</fullName>
    <label>Content Effort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>