force-app/main/default/objects/Communications_Projects__c/fields/Master_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Project Name</label>
    <referenceTo>Communications_Projects__c</referenceTo>
    <relationshipLabel>Related Projects</relationshipLabel>
    <relationshipName>Communication_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>