force-app/main/default/objects/Communications_Projects__c/fields/Master_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Master_Project_Title__c</fullName>
    <formula>Master_Project_Name__r.Project_Title__c</formula>
    <label>Master Project Title</label>
    <type>Text</type>
</CustomField>