force-app/main/default/objects/Communications_Projects__c/fields/Notes_Content__c.field-meta.xml
<CustomField>
    <fullName>Notes_Content__c</fullName>
    <label>Notes (Content)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>