force-app/main/default/objects/Communications_Projects__c/fields/Notes_Scope__c.field-meta.xml
<CustomField>
    <fullName>Notes_Scope__c</fullName>
    <label>Notes (Scope)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>