force-app/main/default/objects/Communications_Projects__c/fields/Print_Services__c.field-meta.xml
<CustomField>
    <fullName>Print_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Services</label>
    <type>Checkbox</type>
</CustomField>