force-app/main/default/objects/Communications_Projects__c/fields/Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders__c</fullName>
    <label>Stakeholders</label>
    <type>TextArea</type>
</CustomField>