force-app/main/default/objects/Communications_Projects__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Title__c</columns>
    <columns>Department__c</columns>
    <columns>Topic__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Designer__c</columns>
    <columns>Stakeholders__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Notes_Content__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>