force-app/main/default/objects/Communications_Projects__c/listViews/Master_Projects.listView-meta.xml
<ListView>
    <fullName>Master_Projects</fullName>
    <columns>Master_Project_Title__c</columns>
    <columns>Project_Title__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Stakeholders__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Notes_Content__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>Master_Project_Title__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Master Projects</label>
</ListView>